// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tstypes.sql > line 2 1`] = `
[
  "SET extra_float_digits = 0",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 25,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "extra_float_digits",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 20 1`] = `
[
  "  -- error, empty lexeme is not allowed

-- Also try it with non-error-throwing API
SELECT pg_input_is_valid('foo', 'tsvector')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 91,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 109,
                            "sval": {
                              "sval": "foo",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 116,
                            "sval": {
                              "sval": "tsvector",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 91,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 28 1`] = `
[
  "SELECT '1'::tsquery",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 7,
                          "sval": {
                            "sval": "1",
                          },
                        },
                      },
                      "location": 10,
                      "typeName": {
                        "location": 12,
                        "names": [
                          {
                            "String": {
                              "sval": "tsquery",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 83 1`] = `
[
  "SELECT 'a' < 'b & c'::tsquery as "true"",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "location": 7,
                          "sval": {
                            "sval": "a",
                          },
                        },
                      },
                      "location": 11,
                      "name": [
                        {
                          "String": {
                            "sval": "<",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 13,
                              "sval": {
                                "sval": "b & c",
                              },
                            },
                          },
                          "location": 20,
                          "typeName": {
                            "location": 22,
                            "names": [
                              {
                                "String": {
                                  "sval": "tsquery",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 90 1`] = `
[
  "SELECT numnode( 'new'::tsquery )",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 16,
                                "sval": {
                                  "sval": "new",
                                },
                              },
                            },
                            "location": 21,
                            "typeName": {
                              "location": 23,
                              "names": [
                                {
                                  "String": {
                                    "sval": "tsquery",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "numnode",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 94 1`] = `
[
  "SELECT 'foo & bar'::tsquery && 'asd'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "foo & bar",
                              },
                            },
                          },
                          "location": 18,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "tsquery",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 28,
                      "name": [
                        {
                          "String": {
                            "sval": "&&",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 31,
                          "sval": {
                            "sval": "asd",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 124 1`] = `
[
  "SELECT strip('wa:1A'::tsvector) @@ 'w:*A'::tsquery as "true"",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 13,
                                    "sval": {
                                      "sval": "wa:1A",
                                    },
                                  },
                                },
                                "location": 20,
                                "typeName": {
                                  "location": 22,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "tsvector",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "strip",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 32,
                      "name": [
                        {
                          "String": {
                            "sval": "@@",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 35,
                              "sval": {
                                "sval": "w:*A",
                              },
                            },
                          },
                          "location": 41,
                          "typeName": {
                            "location": 43,
                            "names": [
                              {
                                "String": {
                                  "sval": "tsquery",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 129 1`] = `
[
  "SELECT 'supernova'::tsvector @@ 'super'::tsquery AS "false"",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "false",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "supernova",
                              },
                            },
                          },
                          "location": 18,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "tsvector",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 29,
                      "name": [
                        {
                          "String": {
                            "sval": "@@",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 32,
                              "sval": {
                                "sval": "super",
                              },
                            },
                          },
                          "location": 39,
                          "typeName": {
                            "location": 41,
                            "names": [
                              {
                                "String": {
                                  "sval": "tsquery",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 137 1`] = `
[
  "SELECT to_tsvector('simple', '1 2 3 1') @@ '1 <-> 2' AS "true"",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 19,
                                "sval": {
                                  "sval": "simple",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "location": 29,
                                "sval": {
                                  "sval": "1 2 3 1",
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "to_tsvector",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 40,
                      "name": [
                        {
                          "String": {
                            "sval": "@@",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 43,
                          "sval": {
                            "sval": "1 <-> 2",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 153 1`] = `
[
  "SELECT strip(to_tsvector('simple', '1 2 3 4')) @@ '1 <-> 2 <-> 3' AS "false"",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "false",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "location": 25,
                                      "sval": {
                                        "sval": "simple",
                                      },
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "location": 35,
                                      "sval": {
                                        "sval": "1 2 3 4",
                                      },
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "to_tsvector",
                                    },
                                  },
                                ],
                                "location": 13,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "strip",
                              },
                            },
                          ],
                          "location": 7,
                        },
                      },
                      "location": 47,
                      "name": [
                        {
                          "String": {
                            "sval": "@@",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 50,
                          "sval": {
                            "sval": "1 <-> 2 <-> 3",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 192 1`] = `
[
  "SELECT ts_rank(' a:1 s:2C d g'::tsvector, 'a | s')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 15,
                                "sval": {
                                  "sval": " a:1 s:2C d g",
                                },
                              },
                            },
                            "location": 30,
                            "typeName": {
                              "location": 32,
                              "names": [
                                {
                                  "String": {
                                    "sval": "tsvector",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 42,
                            "sval": {
                              "sval": "a | s",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "ts_rank",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 202 1`] = `
[
  "SELECT ts_rank_cd(' a:1 s:2C d g'::tsvector, 'a | s')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 18,
                                "sval": {
                                  "sval": " a:1 s:2C d g",
                                },
                              },
                            },
                            "location": 33,
                            "typeName": {
                              "location": 35,
                              "names": [
                                {
                                  "String": {
                                    "sval": "tsvector",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 45,
                            "sval": {
                              "sval": "a | s",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "ts_rank_cd",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 241 1`] = `
[
  "SELECT ts_delete(to_tsvector('english', 'Rebel spaceships, striking from a hidden base'), 'spaceship')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 29,
                                  "sval": {
                                    "sval": "english",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 40,
                                  "sval": {
                                    "sval": "Rebel spaceships, striking from a hidden base",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "to_tsvector",
                                },
                              },
                            ],
                            "location": 17,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 90,
                            "sval": {
                              "sval": "spaceship",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "ts_delete",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 248 1`] = `
[
  "SELECT ts_delete('base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3'::tsvector, ARRAY['spaceship','rebel'])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 17,
                                "sval": {
                                  "sval": "base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3",
                                },
                              },
                            },
                            "location": 79,
                            "typeName": {
                              "location": 81,
                              "names": [
                                {
                                  "String": {
                                    "sval": "tsvector",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_ArrayExpr": {
                            "elements": [
                              {
                                "A_Const": {
                                  "location": 97,
                                  "sval": {
                                    "sval": "spaceship",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 109,
                                  "sval": {
                                    "sval": "rebel",
                                  },
                                },
                              },
                            ],
                            "location": 91,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "ts_delete",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 256 1`] = `
[
  "SELECT unnest('base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3'::tsvector)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 14,
                                "sval": {
                                  "sval": "base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3",
                                },
                              },
                            },
                            "location": 76,
                            "typeName": {
                              "location": 78,
                              "names": [
                                {
                                  "String": {
                                    "sval": "tsvector",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "unnest",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 262 1`] = `
[
  "SELECT tsvector_to_array('base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3'::tsvector)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 25,
                                "sval": {
                                  "sval": "base:7 hidden:6 rebel:1 spaceship:2,33A,34B,35C,36D strike:3",
                                },
                              },
                            },
                            "location": 87,
                            "typeName": {
                              "location": 89,
                              "names": [
                                {
                                  "String": {
                                    "sval": "tsvector",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "tsvector_to_array",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 265 1`] = `
[
  "SELECT array_to_tsvector(ARRAY['base','hidden','rebel','spaceship','strike'])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_ArrayExpr": {
                            "elements": [
                              {
                                "A_Const": {
                                  "location": 31,
                                  "sval": {
                                    "sval": "base",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 38,
                                  "sval": {
                                    "sval": "hidden",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 47,
                                  "sval": {
                                    "sval": "rebel",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 55,
                                  "sval": {
                                    "sval": "spaceship",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 67,
                                  "sval": {
                                    "sval": "strike",
                                  },
                                },
                              },
                            ],
                            "location": 25,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "array_to_tsvector",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 272 1`] = `
[
  "SELECT setweight('w:12B w:13* w:12,5,6 a:1,3* a:3 w asd:1dc asd zxc:81,567,222A'::tsvector, 'c')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 17,
                                "sval": {
                                  "sval": "w:12B w:13* w:12,5,6 a:1,3* a:3 w asd:1dc asd zxc:81,567,222A",
                                },
                              },
                            },
                            "location": 80,
                            "typeName": {
                              "location": 82,
                              "names": [
                                {
                                  "String": {
                                    "sval": "tsvector",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 92,
                            "sval": {
                              "sval": "c",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "setweight",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tstypes.sql > line 279 1`] = `
[
  "SELECT ts_filter('base:7A empir:17 evil:15 first:11 galact:16 hidden:6A rebel:1A spaceship:2A strike:3A victori:12 won:9'::tsvector, '{a}')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 17,
                                "sval": {
                                  "sval": "base:7A empir:17 evil:15 first:11 galact:16 hidden:6A rebel:1A spaceship:2A strike:3A victori:12 won:9",
                                },
                              },
                            },
                            "location": 121,
                            "typeName": {
                              "location": 123,
                              "names": [
                                {
                                  "String": {
                                    "sval": "tsvector",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 133,
                            "sval": {
                              "sval": "{a}",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "ts_filter",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
